--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-streamlit==1.28.1
-requests==2.31.0
-pandas==2.0.3
+pip>=24.2
+setuptools>=68
+wheel>=0.41
+
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+requests==2.32.3
